# lazyage

./: .gitignore  Cargo.toml  GEMINI.md  README.md  agehelp.md  d-test.md  fix_age.rs  repro.rs  text.txt
src/: app.rs  crypto.rs  discovery.rs  main.rs  ui.rs
